# social_sim_ros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
config/: differential_drive_jackal.yaml  differential_drive_turtlebot3.yaml  jackal_move.rviz  jackal_odom.rviz
include/: differential_drive_sim_controller.h
launch/: differential_drive_jackal.launch  differential_drive_turtlebot3.launch  gmapping_jackal.launch  slam_jackal.launch
msg/: PersonEntry.msg  PersonEntryArray.msg
params/jackal/odom_nav_params/: local_costmap_params.yaml
social_sim_ros/: CMakeLists.txt  package.xml
social_sim_ros/config/: differential_drive_jackal.yaml  differential_drive_kuri.yaml  differential_drive_warthog.yaml  jackal_cartographer.lua  logging.conf  move.rviz
social_sim_ros/launch/: cartographer_jackal.launch  depth_to_laserscan.launch  differential_drive_jackal.launch  differential_drive_kuri.launch  differential_drive_teleop.launch  differential_drive_warthog.launch  gmapping_jackal.launch  gmapping_warthog.launch  jackal_demo.launch  jackal_demo_slam_random_dest.launch  jackal_description.launch  jackal_move_base.launch  kuri_demo.launch  kuri_description.launch  kuri_manual_record.launch  kuri_move_base.launch  kuri_move_base_global_only.launch  kuri_survey.launch  lab_map_server.launch  map_publisher.launch  map_server.launch  odom_to_tf.launch  outdoor_map_server.launch  p2os_driver.launch  ros_controlled_recorder.launch  sean_navstack.launch  sim_rosbridge.launch  sim_tcp_bridge.launch  submission_runner.launch  submission_trial_info.launch  trial_info.launch  velodyne_to_laser.launch  warthog_description.launch  warthog_move_base.launch  warthog_velodyne_to_laser.launch
social_sim_ros/maps/ETH/: map.yaml
social_sim_ros/maps/hotel/: map.yaml
social_sim_ros/maps/lab/: map.yaml
social_sim_ros/maps/labstudy/: map.yaml
social_sim_ros/maps/outdoor/: map.yaml
social_sim_ros/maps/university/: map.yaml
social_sim_ros/maps/warehouse/: map.yaml
social_sim_ros/maps/warehouse_small/: map.yaml
social_sim_ros/maps/zara/: map.yaml
social_sim_ros/msg/: Agent.msg  AgentArray.msg  PoseArray.msg  RealDepthImage.msg  SceneInfo.msg  TrialInfo.msg  TrialStart.msg
social_sim_ros/params/jackal/: base_local_planner_params.yaml  costmap_common_params.yaml
social_sim_ros/params/jackal/map_nav_params/: global_costmap_params.yaml
social_sim_ros/params/jackal/odom_nav_params/: global_costmap_params.yaml
social_sim_ros/params/kuri/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_default.yaml  move_base_params.yaml
social_sim_ros/params/kuri/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
social_sim_ros/params/ros_tcp_endpoint/: params.yaml
social_sim_ros/params/warthog/: base_local_planner_params.yaml  costmap_common_params.yaml
social_sim_ros/params/warthog/map_nav_params/: local_costmap_params.yaml
social_sim_ros/scripts/: bag_image_extractor.py  debug_time.py  make_video.sh  ros_controlled_recorder.py  run_scenarios.py
social_sim_ros/src/: depth_synchronizer.py  differential_drive_sim_controller.cpp  keyboard_test.py  map_publisher.py  odom_to_tf.py  pose_to_people.cpp  random_dest.py  submission_trial_info.py  tcp_server.py  tcp_server_tf.py  trial_info.py  trial_runner.py  tutorial_controller.py
social_sim_ros/urdf/jackal/: jackal.urdf.xacro
social_sim_ros/urdf/kuri/: base.urdf.xacro  gazebo.urdf.xacro  kuri.urdf.xacro  kuri2.urdf.xacro
social_sim_ros/urdf/warthog/: warthog.urdf.xacro
social_sim_teleop/: CMakeLists.txt  README.md  package.xml
social_sim_teleop/launch/: joystick_override.launch  ps3_teleop.launch  ps3_teleop_p3dx.launch
social_sim_teleop/launch/includes/: velocity_smoother.launch.xml
social_sim_teleop/param/: smoother.yaml
social_sim_teleop/scripts/: joystick_override.py  social_sim_teleop_key
social_sim_teleop/src/: social_sim_teleop_joy.cpp  social_sim_teleop_key.cpp
src/: odom_to_tf.py  trial_runner.py
