<package>
  <name>social_sim_teleop</name>
  <version>0.0.1</version>
  <description>Provides teleoperation using joysticks or keyboard. Based on the turtlebot_teleop package.</description>
  <maintainer email="nathan.tsoi@yale.edu">Nathan Tsoi</maintainer>
  <license>BSD</license>

  <author email="nathan.tsoi@yale.edu">Nathan Tsoi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
</package>

